--- a/Synapse/config/environment.yml
+++ b/Synapse/config/environment.yml
@@ -4,11 +4,17 @@ channels:
   - defaults
 dependencies:
   - pip:
-    - sentencepiece
-    - transformers
-    - timm
-    - fairscale
+    - pip
+    - numpy==1.23.4 #1.18.5
+    - sentencepiece==0.1.97
+    - timm==0.6.12
+    - fairscale==0.4.13
+    - opencv-python==4.7.0.68
+    - flashtext==2.7
+    - openai==0.26.5
+    - torchvision==0.12.0
+    - torchaudio==0.11.0
     - azure-storage-file-datalake==12.7.0
-    - opencv-python
-    - flashtext
-    - openai
+    - transformers==4.26.1
+    - pyarrow==11.0.0
+    - graphframes==0.6
